--- a/toy/build.gradle
+++ b/toy/build.gradle
@@ -12,6 +12,10 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	all {
+		//logback과의 충돌 방지
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+	}
 }
 
 repositories {
@@ -21,6 +25,19 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2' 
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2' 
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	implementation 'javax.annotation:javax.annotation-api:1.2-b01'
+	//implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+	//취약점으로 인해 의존성 업데이트 버전 명시
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.15.0'
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.15.0'
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '2.15.0'
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.15.0'
+	implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
+	implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.32'
+	compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
