--- a/toy/build.gradle
+++ b/toy/build.gradle
@@ -29,13 +29,10 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2' 
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	implementation 'javax.annotation:javax.annotation-api:1.2-b01'
-	//implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-	//취약점으로 인해 의존성 업데이트 버전 명시
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.15.0'
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.15.0'
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '2.15.0'
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.15.0'
+	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
+	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.32'
 	implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.32'
 	compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
 	compileOnly 'org.projectlombok:lombok'
