--- a/toy/src/main/resources/application.yml
+++ b/toy/src/main/resources/application.yml
@@ -1,9 +1,17 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/toy?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: root
+    hikari:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mysql://localhost:3306/toy?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+      username: root
+      password: root
+      maximum-pool-size: 10
+      connection-timeout: 5000
+      connection-init-sql: SELECT 1
+      validation-timeout: 2000
+      minimum-idle: 10
+      idle-timeout: 600000
+      max-lifetime: 1800000 
     
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
